@@ -1,0 +1,29 @@
+/*
+ *   This file is part of the MLV Library.
+ *
+ *   Copyright (C) 2016 Adrien Boussicault, Marc Zipstein
+ *
+ *
+ *    This Library is free software: you can redistribute it and/or modify
+ *    it under the terms of the GNU General Public License as published by
+ *    the Free Software Foundation, either version 3 of the License, or
+ *    (at your option) any later version.
+ *
+ *    This Library is distributed in the hope that it will be useful,
+ *    but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *    GNU General Public License for more details.
+ *
+ *    You should have received a copy of the GNU General Public License
+ *    along with this Library.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#ifndef __MLV__WINDOW_H__
+#define __MLV__WINDOW_H__
+
+#include "MLV_image.h"
+
+void MLV_register_a_post_producter( void ( *post_producter )( MLV_Image* ) );
+void MLV_unregister_a_post_producter( void ( *post_producter )( MLV_Image* ) );
+
+#endif
